# corpusbot

./: .gitignore  Cargo.toml  create_corpus.ros
src/: bot.rs  main.rs
