[package]
name = "corpusbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "time"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
